Incorpore solo un comentario para prueba de nueva rama

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </ul>
         </nav>
         <main>
+            <!-- Es solo un comentario para probar el nuevo branch "nueva_rama" -->
             <div id="home">
                 <div class="home cont">
                     <div>
