--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Este es un segundo cambio para una nueva prueba -->
         </main>
 
         <footer>
