--- a/index.html
+++ b/index.html
@@ -7,13 +7,45 @@
     <title>Desarrollo Web - Disegno CR</title>
     <!-- Logo del sitio -->
     <link rel="icon" href="img/favicon.png" type="image/x-icon"/>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    
     <!-- Enlaces a la hoja de estilo-->
     <link rel="stylesheet" href="css/styles1.css">
 </head>
 <body>
-    <div class="container">
-        <nav>
+    <div class="contenedor">
+        <!-- Inicio de nav -->
+        <nav class="navbar navbar-expand-lg bg-bkg-clr-dark-blue" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a href="index.html">
+                    <img src="img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+        <!-- <nav>
             <a href="index.html">
                 <img src="img/logos/logo_CR.png" alt="logo Disegno CR" />
             </a>
@@ -22,10 +54,10 @@
                 <li><a href="pages/nosotros.html">Nosotros</a> </li>
                 <li><a href="pages/servicios.html">Servicios</a> </li>
                 <li><a href="pages/portfolio.html">Portfolio</a> </li>
-                <!-- <li><a href="pages/clientes.html">Clientes</a> </li> -->
                 <li><a href="pages/contacto.html">Contacto</a> </li>
             </ul>
-        </nav>
+        </nav> -->
+        <!-- Fin de nav -->
         <main>
             <!-- Es solo un comentario para probar el nuevo branch "nueva_rama" -->
             <div id="home">
@@ -61,5 +93,7 @@
             </div>
         </footer>
     </div>
+    <!-- Link js de bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
