--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -7,22 +7,43 @@
     <title>Desarrollo Web - Disegno CR</title>
     <!-- icono del proyecto-->
     <link rel="icon" href="../img/favicon.png" type="image/x-icon"/>
+    <!-- link a bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link a la hoja de estilo -->
     <link rel="stylesheet" href="../css/styles1.css">
 </head>
 <body>
-    <nav>
-        <a href="../index.html">
-            <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
-        </a>
-        <ul>
-            <li><a href="../index.html">Nosotros</a> </li>
-            <li><a href="servicios.html">Servicios</a> </li>
-            <li><a href="portfolio.html">Portfolio</a> </li>
-            <li><a href="clientes.html">Clientes</a> </li>
-            <li><a href="contacto.html">Contacto</a> </li>
-        </ul>
+    <!-- Inicio de nav -->
+    <nav class="navbar navbar-expand-lg bg-bkg-clr-dark-blue" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a href="../index.html">
+                <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
+    <!-- Fin de nav -->
     <header>
 
     </header>
@@ -54,5 +75,7 @@
             </a>
         </div>
     </footer>
+    <!-- Link js de bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
