Quita de comentarios y algunas pequeñas animaciones

--- a/index.html
+++ b/index.html
@@ -44,26 +44,13 @@
                 </div>
             </div>
         </nav>
-        
-        <!-- <nav>
-            <a href="index.html">
-                <img src="img/logos/logo_CR.png" alt="logo Disegno CR" />
-            </a>
-            <ul>
-                <li><a href="index.html">Inicio</a> </li>
-                <li><a href="pages/nosotros.html">Nosotros</a> </li>
-                <li><a href="pages/servicios.html">Servicios</a> </li>
-                <li><a href="pages/portfolio.html">Portfolio</a> </li>
-                <li><a href="pages/contacto.html">Contacto</a> </li>
-            </ul>
-        </nav> -->
         <!-- Fin de nav -->
         <main>
             <!-- Es solo un comentario para probar el nuevo branch "nueva_rama" -->
             <div id="home">
                 <div class="home cont">
                     <div>
-                        <h1>Disegno CR</h1>
+                        <h1 class="homeMarca">Disegno CR</h1>
                         <p>Lo que necesitas esta aquí!!</p>
                     </div>
                 </div>
