Finalizada 2da pre entrega, mezcla grid y Bs

--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
             <div id="home">
                 <div class="home cont">
                     <div>
-                        <h1 class="homeMarca">Disegno CR</h1>
+                        <div class="homeMarca">
+                            <span>D</span>
+                            <span>i</span>
+                            <span>s</span>
+                            <span>e</span>
+                            <span>g</span>
+                            <span>n</span>
+                            <span>o</span>
+                            <span>&nbsp;</span>
+                            <span>C</span>
+                            <span>R</span>
+                        </div>
                         <p>Lo que necesitas esta aquí!!</p>
                     </div>
                 </div>
