Finalizada 2da pre entrega, correcciones finales

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,24 +52,24 @@
                     <!-- Formulario bootstrap -->
                     <form>
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="Ricardo">
-                            <label for="floatingInput">Nombre</label>
+                            <input type="text" class="form-control" id="inputNombre" placeholder="Ricardo">
+                            <label for="inputNombre">Nombre</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="Ricardo">
-                            <label for="floatingInput">Correo electrónico</label>
+                            <input type="email" class="form-control" id="inputEmail" placeholder="ricardo@gmail.com">
+                            <label for="inputEmail">Correo electrónico</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="Ricardo">
-                            <label for="floatingInput">Teléfono</label>
+                            <input type="tel" class="form-control" id="inputTel" placeholder="1156756848">
+                            <label for="inputTel">Teléfono</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-                            <label for="floatingTextarea">Comentario</label>
+                            <textarea class="form-control" placeholder="Deja un comentario aquí" id="textareaComentario"></textarea>
+                            <label for="textareaComentario">Comentario</label>
                           </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault">Deseo recibir información.</label>
+                            <input class="form-check-input" type="checkbox" value="" id="checkNote">
+                            <label class="form-check-label" for="checkNote">Deseo recibir información.</label>
                         </div>
                         <div>
                             <button type="submit" class="btn btnForm">Enviar</button>
