carga de todo el cambio con scss incluido

--- a/index.html
+++ b/index.html
@@ -10,67 +10,126 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
     <!-- Enlaces a la hoja de estilo-->
-    <link rel="stylesheet" href="css/styles1.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="contenedor">
-        <!-- Inicio de nav -->
-        <nav class="navbar navbar-expand-lg bg-bkg-clr-dark-blue" data-bs-theme="dark">
-            <div class="container-fluid">
-                <a href="index.html">
-                    <img src="img/logos/logo_CR.png" alt="logo Disegno CR"/>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
-                        </li>
-                    </ul>
+    <!-- Inicio de nav -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-bkg-clr-dark-blue" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a href="index.html">
+                <img src="img/logos/logo_CR.png" alt="logo Disegno CR"/>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Fin de nav -->
+    <main>
+        <!-- Es solo un comentario para probar el nuevo branch "nueva_rama" -->
+        <div id="home">
+            <div class="home cont">
+                <div>
+                    <div class="homeMarca">
+                        <span>D</span>
+                        <span>i</span>
+                        <span>s</span>
+                        <span>e</span>
+                        <span>g</span>
+                        <span>n</span>
+                        <span>o</span>
+                        <span>&nbsp;</span>
+                        <span>C</span>
+                        <span>R</span>
+                    </div>
+                    <p>Lo que necesitas esta aquí!!</p>
                 </div>
             </div>
-        </nav>
-        <!-- Fin de nav -->
-        <main>
-            <!-- Es solo un comentario para probar el nuevo branch "nueva_rama" -->
-            <div id="home">
-                <div class="home cont">
-                    <div>
-                        <div class="homeMarca">
-                            <span>D</span>
-                            <span>i</span>
-                            <span>s</span>
-                            <span>e</span>
-                            <span>g</span>
-                            <span>n</span>
-                            <span>o</span>
-                            <span>&nbsp;</span>
-                            <span>C</span>
-                            <span>R</span>
-                        </div>
-                        <p>Lo que necesitas esta aquí!!</p>
+        </div>
+        <!-- Este es un segundo cambio para una nueva prueba -->
+    </main>
+    <section class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 my-3">
+                <div class="card">
+                    <img src="img/index/Web Basico.svg" class="card-img-top" alt="Desarrollo de Web básica">
+                    <div class="card-body">
+                        <h5 class="card-title">WEB BÁSICA</h5>
+                        <p class="card-text">Opción inicial económica para emprendedores y PyMEs</p>
+                        <a href="#" class="btn btn-primary">Consultanos +</a>
                     </div>
                 </div>
             </div>
-            <!-- Este es un segundo cambio para una nueva prueba -->
-        </main>
 
-        <footer>
-            <div>
+            <div class="col-lg-4 col-md-4 my-3">
+                <div class="card">
+                    <img src="img/index/Diseno Web Autogestionable.svg" alt="Diseño web Autogestionable">
+                    <div class="card-body">
+                        <h5 class="card-title">WEB AUTOGESTIONABLE</h5>
+                        <p class="card-text">Para que puedas manejar el sitio web por tu cuenta</p>
+                        <a href="#" class="btn btn-primary">Consultanos +</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 my-3">
+                <div class="card">
+                    <img src="img/index/Diseno Web Ecommerce Tiendas Online.svg" alt="Diseño de Ecommerce">
+                    <div class="card-body">
+                        <h5 class="card-title">TIENDA ONLINE</h5>
+                        <p>Vendé tus productos o servicios online y potenciá tus ventas.</p>
+                        <a href="#" class="btn btn-primary">Consultanos +</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-6 text-center bg-font-clr-x-light-blue">
+            <ul>
+                <li>
+                    <a href="index.html">Inicio</a>
+                </li>
+                <li>
+                    <a href="pages/nosotros.html">Nosotros</a>
+                </li>
+                <li>
+                    <a href="pages/servicios.html">Servicios</a>
+                </li>
+                <li>
+                    <a href="pages/portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="pages/contacto.html">Contacto</a>
+                </li>
+            </ul>     
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-6 text-center bg-font-clr-x-light-blue">
+            <p>Información</p>
+            <p>Urquiza 1386, Ramos Mejía</p>
+            <p>Buenos Aires, Argentina</p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-6 text-center">
+            <div class="redes">
                 <a href="https://wa.me/5491157611414/?text=Hola!%20Quiero%20realizar%20una%20consulta" target="_blank">
                     <img class="socialMedia" src="img/socialMedia/whatsapp-logo.png" alt="whatsapp Disegno CR">
                 </a>
@@ -84,13 +143,14 @@
                     <img class="socialMedia" src="img/socialMedia/youtube.png" alt="Youtube Disegno CR">
                 </a>
             </div>
-            <div>
+            <div class="text-center redes">
                 <a href="index.html">
                     <img src="img/logos/logo_CR.png" alt="logo Disegno CR"/>
                 </a>
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
+    
     <!-- Link js de bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
