--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -10,11 +10,11 @@
     <!-- link a bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link a la hoja de estilo -->
-    <link rel="stylesheet" href="../css/styles1.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Inicio de nav -->
-    <nav class="navbar navbar-expand-lg bg-bkg-clr-dark-blue" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-bkg-clr-dark-blue" data-bs-theme="dark">
         <div class="container-fluid">
             <a href="../index.html">
                 <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
@@ -55,27 +55,55 @@
         
     </main>
     <footer>
-        <div>
-            <a href="https://wa.me/5491157611414/?text=Hola!%20Quiero%20realizar%20una%20consulta" target="_blank">
-                <img class="socialMedia" src="../img/socialMedia/whatsapp-logo.png" alt="whatsapp Disegno CR">
-            </a>
-            <a href="https://www.facebook.com/ricardo.conti.14" target="_blank">
-                <img class="socialMedia" src="../img/socialMedia/facebook.png" alt="Facebook Disegno CR">
-            </a>
-            <a href="https://www.instagram.com/richard.c14/" target="_blank">
-                <img class="socialMedia" src="../img/socialMedia/IG.png" alt="Instagram Disegno CR">
-            </a>
-            <a href="https://www.youtube.com/channel/UCCTgibjEPBel8V4_x1DIAPA" target="_blank">
-                <img class="socialMedia" src="../img/socialMedia/youtube.png" alt="Youtube Disegno CR">
-            </a>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-6 text-center bg-font-clr-x-light-blue">
+            <ul>
+                <li>
+                    <a href="../index.html">Inicio</a>
+                </li>
+                <li>
+                    <a href="nosotros.html">Nosotros</a>
+                </li>
+                <li>
+                    <a href="servicios.html">Servicios</a>
+                </li>
+                <li>
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="contacto.html">Contacto</a>
+                </li>
+            </ul>     
         </div>
-        <div>
-            <a href="../index.html">
-                <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
-            </a>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-6 text-center bg-font-clr-x-light-blue">
+            <p>Información</p>
+            <p>Urquiza 1386, Ramos Mejía</p>
+            <p>Buenos Aires, Argentina</p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-6 text-center">
+            <div class="redes">
+                <a href="https://wa.me/5491157611414/?text=Hola!%20Quiero%20realizar%20una%20consulta" target="_blank">
+                    <img class="socialMedia" src="../img/socialMedia/whatsapp-logo.png" alt="whatsapp Disegno CR">
+                </a>
+                <a href="https://www.facebook.com/ricardo.conti.14" target="_blank">
+                    <img class="socialMedia" src="../img/socialMedia/facebook.png" alt="Facebook Disegno CR">
+                </a>
+                <a href="https://www.instagram.com/richard.c14/" target="_blank">
+                    <img class="socialMedia" src="../img/socialMedia/IG.png" alt="Instagram Disegno CR">
+                </a>
+                <a href="https://www.youtube.com/channel/UCCTgibjEPBel8V4_x1DIAPA" target="_blank">
+                    <img class="socialMedia" src="../img/socialMedia/youtube.png" alt="Youtube Disegno CR">
+                </a>
+            </div>
+            <div class="text-center redes">
+                <a href="../index.html">
+                    <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                </a>
+            </div>
         </div>
     </footer>
+    
     <!-- Link js de bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
+ 
