se incorporaron detalles faltantes de SEO

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <!-- Logo del sitio -->
     <link rel="icon" href="img/favicon.png" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    
     <!-- Enlaces a la hoja de estilo-->
     <link rel="stylesheet" href="css/style.css">
+    <!-- SEO -->
+    <meta name="description" content="Es importante que sitio desarrollo este diseñado con estilo propio, a medida para tu necesidad.">
+    <meta name="keywords" content="web básica, ecónomica, sitio autogestionable, Tienda online, Disegno CR">
 </head>
 <body>
     <!-- Inicio de nav -->
@@ -68,6 +70,7 @@
         <!-- Este es un segundo cambio para una nueva prueba -->
     </main>
     <section class="container">
+        <h1>Diseños</h1>
         <div class="row">
             <div class="col-lg-4 col-md-4 my-3">
                 <div class="card">
@@ -75,7 +78,7 @@
                     <div class="card-body">
                         <h5 class="card-title">WEB BÁSICA</h5>
                         <p class="card-text">Opción inicial económica para emprendedores y PyMEs</p>
-                        <a href="#" class="btn btn-primary">Consultanos +</a>
+                        <a href="pages/contacto.html" class="btn btn-primary">Consultanos +</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +89,7 @@
                     <div class="card-body">
                         <h5 class="card-title">WEB AUTOGESTIONABLE</h5>
                         <p class="card-text">Para que puedas manejar el sitio web por tu cuenta</p>
-                        <a href="#" class="btn btn-primary">Consultanos +</a>
+                        <a href="pages/contacto.html" class="btn btn-primary">Consultanos +</a>
                     </div>
                 </div>
             </div>
@@ -97,7 +100,7 @@
                     <div class="card-body">
                         <h5 class="card-title">TIENDA ONLINE</h5>
                         <p>Vendé tus productos o servicios online y potenciá tus ventas.</p>
-                        <a href="#" class="btn btn-primary">Consultanos +</a>
+                        <a href="pages/contacto.html" class="btn btn-primary">Consultanos +</a>
                     </div>
                 </div>
             </div>
