--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desarrollo Web - Disegno CR</title>
+    <title>La empresa Disegno CR</title>
     <!-- icono del proyecto-->
     <link rel="icon" href="../img/favicon.png" type="image/x-icon"/>
     <!-- link a bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link a la hoja de estilo -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- SEO -->
+    <meta name="description" content="Brindamos innovación, calidad te garantizamos que estaras muy orgulloso de lo que construyamos juntos">
+    <meta name="keywords" content="aplicaciones web, applicaciones moviles, desarrollo web, diseño web, experiencia al cliente">
 </head>
 <body>
     <!-- Inicio de nav -->
@@ -53,13 +56,12 @@
                     <p>Somos una empresa de desarrollo de aplicaciones web y móviles para la web y dispositivos móviles. Ofrecemos servicios profesionales de diseño y desarrollo web a nuestros clientes, desde la creación de sitios web estáticos hasta la creación de aplicaciones web dinámicas.
                     </p>
                     <p>Estamos comprometidos con la innovación y el éxito de nuestros clientes al ofrecerles soluciones personalizadas y asequibles para satisfacer sus necesidades.</p>
-                    <p>Nuestros profesionales experimentados cuentan con una amplia gama de habilidades en desarrollo web, diseño web, programación, marketing, SEO y ciberseguridad. Utilizamos herramientas modernas y avanzadas para garantizar que nuestros clientes obtengan el mejor resultado de su proyecto.</p>
+                    <p>Nuestros profesionales experimentados cuentan con una amplia gama de habilidades en <strong>web, diseño web, programación, marketing, SEO y ciberseguridad.</strong> Utilizamos herramientas modernas y avanzadas para garantizar que nuestros clientes obtengan el mejor resultado de su proyecto.</p>
                     <p>Trabajamos con nuestros clientes para comprender sus necesidades y desarrollar soluciones a medida. Ofrecemos soluciones asequibles que se adapten a su presupuesto, desde pequeños sitios web hasta aplicaciones móviles complejas. Proporcionamos soporte técnico completo a nuestros clientes para asegurar una experiencia de usuario libre de problemas.</p>
                     <p>En Disegno CR, nos enorgullecemos de ofrecer soluciones de calidad a nuestros clientes. Estamos comprometidos con el éxito de nuestros clientes y trabajamos duro para garantizar que obtengan el mejor valor de sus proyectos. Si está buscando una empresa de desarrollo web confiable que ofrezca soluciones innovadoras a precios asequibles, contacte con DesdiWeb para obtener más información.</p>
                 </div>
-                <!-- <div class="imgNosotros"> -->
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
-                    <img class="img-fluid" src="../img/nosotros.jpg" alt="Nosotros somos Disegno CR">
+                    <img class="img-fluid" src="../img/nosotros/nosotros.webp" alt="Nosotros somos Disegno CR">
                 </div>
             </div>
             
