--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desarrollo Web - Disegno CR</title>
+    <title>Contacta a Disegno CR</title>
     <!-- icono del proyecto-->
     <link rel="icon" href="../img/favicon.png" type="image/x-icon"/>
     <!-- link a bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link a la hoja de estilo -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- SEO -->
+    <meta name="description" content="Contactanos para tener un mayor aporte a tus necesidades.">
+    <meta name="keywords" content="diesño web, contactanos, disegno CR">
 </head>
 <body>
     <!-- Inicio de nav -->
