--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desarrollo Web - Disegno CR</title>
+    <title>El mejor portfolio en Disegno CR</title>
     <!-- icono del proyecto-->
     <link rel="icon" href="../img/favicon.png" type="image/x-icon"/>
     <!-- link a bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link a la hoja de estilo -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- SEO -->
+    <meta name="description" content="Observa parte de algunos de los grandes desarrollos que realizamos en el último tiempo.">
+    <meta name="keywords" content="portfolio, 22diez, seguros GC, supersuelo, quimica daico">
 </head>
 <body>
     <!-- Inicio de nav -->
@@ -49,53 +52,31 @@
         <div class="container portfolio">
             <h1>Portfolio</h1>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <a href="https://www.22diez.com.ar/">
                         <img class="" src="../img/portfolio/22_diez.jpg" alt="Mayorista 22Diez">
                     </a>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <a href="http://www.segurosgc.com.ar/">
                         <img src="../img/portfolio/segurosgc.png" alt="Seguros GC">
                     </a>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <a href="https://quimicadaico.com.ar/">
                         <img src="../img/portfolio/quimicadaico.png" alt="Quimica Daico">
                     </a>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <a href="https://supersuelosa.com.ar/">
                         <img src="../img/portfolio/supersuelo.png" alt="Supersuelo">
                     </a>
                 </div>
             </div>
-            <!-- <div class="portfolio">
-                <div class="card">
-                    <a href="https://www.22diez.com.ar/">
-                        <img src="../img/portfolio/22_diez.jpg" alt="Mayorista 22Diez">
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="http://www.segurosgc.com.ar/">
-                        <img src="../img/portfolio/segurosgc.png" alt="Seguros GC">
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="https://quimicadaico.com.ar/">
-                        <img src="../img/portfolio/quimicadaico.png" alt="Quimica Daico">
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="https://supersuelosa.com.ar/">
-                        <img src="../img/portfolio/supersuelo.png" alt="Supersuelo">
-                    </a>
-                </div>
-            </div> -->
         </div>
     </main>
 
-    <footer>
+    <footer class="fixed-bottom">
         <div class="col-lg-4 col-md-4 col-sm-6 col-6 text-center bg-font-clr-x-light-blue">
             <ul>
                 <li>
