--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desarrollo Web - Disegno CR</title>
+    <title>Hosting, desarrollo y posicionamiento web </title>
     <!-- icono del proyecto-->
     <link rel="icon" href="../img/favicon.png" type="image/x-icon"/>
     <!-- link a bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link a la hoja de estilo -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- SEO -->
+    <meta name="description" content="Nuestra experiencia aplica en una amplia gama de habilidades en desarrollo web, diseño web, programación, marketing y SEO, con herramientas modernas para brindar el mejor resultado de su proyecto.">
+    <meta name="keywords" content="sitios web, contenido web, applicaciones, hosting, marketing, posicionamiento SEO, capacitación SEO, competencia SEO, análisis SEO">
 </head>
 <body>
     <!-- Inicio de nav -->
