Corrección de botones, agregado de page 404 y detalles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- SEO -->
     <meta name="description" content="Es importante que sitio desarrollo este diseñado con estilo propio, a medida para tu necesidad.">
+    <meta name="author" content="Conti Ricardo">
     <meta name="keywords" content="web básica, ecónomica, sitio autogestionable, Tienda online, Disegno CR">
 </head>
 <body>
@@ -19,7 +20,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-bkg-clr-dark-blue" data-bs-theme="dark">
         <div class="container-fluid">
             <a href="index.html">
-                <img src="img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                <picture>
+                    <source media="(min-width:650px)" srcset="img/logos/logo_CR.png" >
+                    <img src="img/logos/icono_CR.png" alt="logo Disegno CR" >
+                </picture>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,7 +51,6 @@
     </nav>
     <!-- Fin de nav -->
     <main>
-        <!-- Es solo un comentario para probar el nuevo branch "nueva_rama" -->
         <div id="home">
             <div class="home cont">
                 <div>
@@ -67,7 +70,6 @@
                 </div>
             </div>
         </div>
-        <!-- Este es un segundo cambio para una nueva prueba -->
     </main>
     <section class="container">
         <h1>Diseños</h1>
@@ -78,7 +80,7 @@
                     <div class="card-body">
                         <h5 class="card-title">WEB BÁSICA</h5>
                         <p class="card-text">Opción inicial económica para emprendedores y PyMEs</p>
-                        <a href="pages/contacto.html" class="btn btn-primary">Consultanos +</a>
+                        <a href="pages/contacto.html" class="btn btn-general">Consultanos +</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +91,7 @@
                     <div class="card-body">
                         <h5 class="card-title">WEB AUTOGESTIONABLE</h5>
                         <p class="card-text">Para que puedas manejar el sitio web por tu cuenta</p>
-                        <a href="pages/contacto.html" class="btn btn-primary">Consultanos +</a>
+                        <a href="pages/contacto.html" class="btn btn-general">Consultanos +</a>
                     </div>
                 </div>
             </div>
@@ -100,14 +102,14 @@
                     <div class="card-body">
                         <h5 class="card-title">TIENDA ONLINE</h5>
                         <p>Vendé tus productos o servicios online y potenciá tus ventas.</p>
-                        <a href="pages/contacto.html" class="btn btn-primary">Consultanos +</a>
+                        <a href="pages/contacto.html" class="btn btn-general">Consultanos +</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <footer>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-6 text-center bg-font-clr-x-light-blue">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-12 text-center bg-font-clr-x-light-blue">
             <ul>
                 <li>
                     <a href="index.html">Inicio</a>
@@ -126,7 +128,7 @@
                 </li>
             </ul>     
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-6 text-center bg-font-clr-x-light-blue">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-12 text-center bg-font-clr-x-light-blue">
             <p>Información</p>
             <p>Urquiza 1386, Ramos Mejía</p>
             <p>Buenos Aires, Argentina</p>
@@ -148,7 +150,10 @@
             </div>
             <div class="text-center redes">
                 <a href="index.html">
-                    <img src="img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                    <picture>
+                        <source media="(min-width:650px)" srcset="img/logos/logo_CR.png" >
+                        <img src="img/logos/icono_CR.png" alt="logo Disegno CR" >
+                    </picture>
                 </a>
             </div>
         </div>
