--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <!-- SEO -->
     <meta name="description" content="Contactanos para tener un mayor aporte a tus necesidades.">
+    <meta name="author" content="Conti Ricardo">
     <meta name="keywords" content="diesño web, contactanos, disegno CR">
 </head>
 <body>
@@ -20,7 +21,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-bkg-clr-dark-blue" data-bs-theme="dark">
         <div class="container-fluid">
             <a href="../index.html">
-                <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                <picture>
+                    <source media="(min-width:650px)" srcset="../img/logos/logo_CR.png" >
+                    <img src="../img/logos/icono_CR.png" alt="logo Disegno CR" >
+                </picture>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
