--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <!-- SEO -->
     <meta name="description" content="Brindamos innovación, calidad te garantizamos que estaras muy orgulloso de lo que construyamos juntos">
+    <meta name="author" content="Conti Ricardo">
     <meta name="keywords" content="aplicaciones web, applicaciones moviles, desarrollo web, diseño web, experiencia al cliente">
 </head>
 <body>
@@ -20,7 +21,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-bkg-clr-dark-blue" data-bs-theme="dark">
         <div class="container-fluid">
             <a href="../index.html">
-                <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                <picture>
+                    <source media="(min-width:650px)" srcset="../img/logos/logo_CR.png" >
+                    <img src="../img/logos/icono_CR.png" alt="logo Disegno CR" >
+                </picture>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -79,7 +83,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Páginas adaptables</h5>
                         <p class="card-text">Su página web funcionará y lucirá muy bien, no sólo en monitores de pc, sino también en dispositivos móviles como celulares y tablets. Esto ayudará a aumentar considerablemente la audiencia de la misma y por ende sus resultados.</p>
-                        <a href="#" class="btn btn-primary">Consultanos +</a>
+                        <a href="contacto.html" class="btn btn-general">Consultanos +</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +93,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Optimizado para Buscadores</h5>
                         <p class="card-text">Abordamos la programación de nuestros diseños de modo que luzcan bien tanto para las personas, como para los motores de búsqueda como Google. Esto contribuye sustancialmente a que su página obtenga mejores posiciones en los resultados de búsqueda.</p>
-                        <a href="#" class="btn btn-primary">Consultanos +</a>
+                        <a href="contacto.html" class="btn btn-general">Consultanos +</a>
                     </div>
                 </div>
             </div>
@@ -99,7 +103,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Marketing online</h5>
                         <p class="card-text">Obtener resultados comerciales a través de su web es el principal objetivo de una correcta estrategia online. Por ello, llevamos adelante nuestro proceso de diseño web haciendo especial foco en aspectos de marketing y experiencia de usuario.</p>
-                        <a href="#" class="btn btn-primary">Consultanos +</a>
+                        <a href="contacto.html" class="btn btn-general">Consultanos +</a>
                     </div>
                 </div>
             </div>
