--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <!-- SEO -->
     <meta name="description" content="Observa parte de algunos de los grandes desarrollos que realizamos en el último tiempo.">
+    <meta name="author" content="Conti Ricardo">
     <meta name="keywords" content="portfolio, 22diez, seguros GC, supersuelo, quimica daico">
 </head>
 <body>
@@ -20,7 +21,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-bkg-clr-dark-blue" data-bs-theme="dark">
         <div class="container-fluid">
             <a href="../index.html">
-                <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                <picture>
+                    <source media="(min-width:650px)" srcset="../img/logos/logo_CR.png" >
+                    <img src="../img/logos/icono_CR.png" alt="logo Disegno CR" >
+                </picture>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,22 +56,22 @@
         <div class="container portfolio">
             <h1>Portfolio</h1>
             <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                     <a href="https://www.22diez.com.ar/">
                         <img class="" src="../img/portfolio/22_diez.jpg" alt="Mayorista 22Diez">
                     </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                     <a href="http://www.segurosgc.com.ar/">
                         <img src="../img/portfolio/segurosgc.png" alt="Seguros GC">
                     </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                     <a href="https://quimicadaico.com.ar/">
                         <img src="../img/portfolio/quimicadaico.png" alt="Quimica Daico">
                     </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                     <a href="https://supersuelosa.com.ar/">
                         <img src="../img/portfolio/supersuelo.png" alt="Supersuelo">
                     </a>
