--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <!-- SEO -->
     <meta name="description" content="Nuestra experiencia aplica en una amplia gama de habilidades en desarrollo web, diseño web, programación, marketing y SEO, con herramientas modernas para brindar el mejor resultado de su proyecto.">
+    <meta name="author" content="Conti Ricardo">
     <meta name="keywords" content="sitios web, contenido web, applicaciones, hosting, marketing, posicionamiento SEO, capacitación SEO, competencia SEO, análisis SEO">
 </head>
 <body>
@@ -20,7 +21,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-bkg-clr-dark-blue" data-bs-theme="dark">
         <div class="container-fluid">
             <a href="../index.html">
-                <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                <picture>
+                    <source media="(min-width:650px)" srcset="../img/logos/logo_CR.png" >
+                    <img src="../img/logos/icono_CR.png" alt="logo Disegno CR" >
+                </picture>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -100,7 +104,7 @@
         
         <section class="bg-bkg-clr-x-light-blue py-2">
             <div class="py-3 mx-auto text-center">
-                <h2>POSICIONAMIENTO WEB SEO</h2>
+                <h2>Posicionamiento WEB SEO</h2>
                 <p>Estas son nuestras habilidades como Agencia SEO que podemos brindarle a tu negocio:</p>
             </div>
             <div class="container">
